student-content/templates/ai-orientation-app/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ai-orientation-app
spec:
  path: /
  to:
    kind: Service
    name: ai-orientation-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
